--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-gb">
-    
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, maximum-scale=1">
-        <meta http-equiv="X-UA-Compatible" content="IE-edge">
-        <meta name="horiseon, Search Engine Optimization,Online Reputation Management, optimization, Management, marketing, bnrand awareness" content=""
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <title>Home - Horiseon</title>
-        <!-- title-updated -->
-    </head>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta mane="description" content="Horiseon: Home webpage">
+    <meta name="keywords" content="Horiseon, Management, marketing, social media, brand awareness, lead generation, cost management">
+    <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Horiseon: Home</title>
+</head>
 
 <body>
     <header>
-        <h1>Hori<span>seo</span>n</h1>
+        <h1>Hori<mark>seo</mark>n</h1>
         <nav>
             <ul>
                 <li>
@@ -27,75 +26,69 @@
                 </li>
             </ul>
         </nav>
-             <!--"div" replaced with "nav"-->
-    </header>
-  <main></main>
-  <!--"main" applied to replace "div"-->
-    <section class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization image" align="left" />
+        </header>
+    <main></main>
+    <section>
+        <article id="search-engine-optimization" class="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="image of 'search engine optimization'" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
                 travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                 your visibility and find the right customers for your business.
             </p>
-        </section>
-        <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management image" align="right" />
+        </article>
+        <article id="online-reputation-management" class="online-reputation-management">
+            <img src="./assets/images/online-reputation-management.jpg" alt="image of 'online reputation management'" class="float-right"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
                 internet connection to say whatever they want about your business. Online Reputation Management gives
                 you the control over what potential customers see when they search for your business.
             </p>
-        </section>
-        <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing image" align="left" />
+        </article>
+        <article id="social-media-marketing" class="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" alt="image of 'social media marketing'" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
                 determine which platforms are suited to your brand, using analytics to find the right markets and
                 increase your lead generation.
             </p>
-        </section>
-        <!--"article" applied to replace "div"-->
+        </article>
     </section>
-    <!--"section" applied to replace "div"-->
-    <aside class="benefits">
-        <section class="benefit-lead">
+    <aside>
+        <article class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="image of 'lead generation'"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
             </p>
-        </section>
-        <section class="benefit-brand">
+        </article>
+        <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="brand-awareness image"/>
+            <img src="./assets/images/brand-awareness.png" alt="image of 'brand awareness'"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
             </p>
-        </section>
-        <section class="benefit-cost">
+        </article>
+        <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"alt="cost-management.png"/>
+            <img src="./assets/images/cost-management.png" alt="image of 'cost management'"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
             </p>
-        </section>
+        </article>
     </aside>
-    <!--"aside" applied to replace "div"-->
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
-    <!--"footer" applied to replace "div"-->
 </body>
 
 </html>
