--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta mane="description" content="Horiseon: Home webpage">
+    <meta name="description" content="Horiseon: Home webpage">
     <meta name="keywords" content="Horiseon, Management, marketing, social media, brand awareness, lead generation, cost management">
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
