--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         </nav>
     </header>
      <!--div replaced with figure, class "hero" - removed--> 
-    <figure title="image of digital marketing meeting"></figure>
+    <figure title="image of digital marketing meeting, that ilustrates four people concentrated in their work. They are in a meeting room, around a big desk, discussing a project. There are some water glasses on the table, a laptop and a fiew sheets of paper."></figure>
     <!--div replaced with section, class "content" - removed--> 
     <section>
         <!--div replaced with article, alt and title attributes added for all images--> 
         <!--First article - id attribute added for navigation--> 
         <article id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="image of 'search engine optimization'" class="float-left" title="image of 'search engine optimization'" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="image of 'search engine optimization'" class="float-left" title="abstract image of 'search engine optimization'" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -48,7 +48,7 @@
             </p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="image of 'online reputation management'" title="image of 'online reputation management'" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="image of 'online reputation management'" title="abstract image of 'online reputation management'" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -57,7 +57,7 @@
             </p>
         </article>
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="image of 'social media marketing'" title="image of 'social media marketing'" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="image of 'social media marketing'" title="abstract image of 'social media marketing'" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -71,7 +71,7 @@
         <!--div replaced with articles, alt and title attributes added for all images--> 
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="image of 'lead generation'" title="image of 'lead generation'" />
+            <img src="./assets/images/lead-generation.png" alt="image of 'lead generation'" title="abstract image of 'lead generation'" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -79,7 +79,7 @@
         </article>
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="image of 'brand awareness'" title="image of 'brand awareness'" />
+            <img src="./assets/images/brand-awareness.png" alt="image of 'brand awareness'" title="abstract image of 'brand awareness'" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -87,7 +87,7 @@
         </article>
         <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="image of 'cost management'" title="image of 'cost management'" />
+            <img src="./assets/images/cost-management.png" alt="image of 'cost management'" title="abstract image of 'cost management'" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
